client/src/components/_common/SectionHeader/SectionHeader.module.css
/* Block */

.root {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;

  /* NOTE: Only Data Files experiences this, and it avoids it by setting body min width... so, what does Design actually want to happen in this case?  */
  flex-wrap: wrap; /* prevent text and actions from colliding */
  align-content: flex-end; /* preserve alignment of items when wrapped */

  height: 2rem; /* ~32px (26px design * 1.2 design-to-app ratio) */
  box-sizing: content-box;

  padding-bottom: 0.75rem; /* 12px (~10px design * 1.2 design-to-app ratio) */
  border-bottom: var(--global-border-width--normal) solid var(--global-color-primary--normal);
}


/* Elements */

/* Do not allow external margin styles */
/* FAQ: Examples: global `h1`–`h6`, user styles) */
.heading {
  margin: 0;

  /* FAQ: It is simpler to do this in CSS than in JavaScript */
  text-transform: capitalize;
}
/* Header actions are always after heading text */
.heading ~ * {
  max-height: 100%; /* (gently) force oversized elements to fit */
}


/* Modifiers */

.for-form {
  /* … */
}

.for-table {
  border-bottom: none;
}

